--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "build": "webpack --progress --config webpack.config.js"
   },
   "dependencies": {
+    "@types/react": "^18.2.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "ts-loader": "^9.4.3",
